fix(speakers): fix modal width on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,6 +57,17 @@ img {
   -webkit-user-select: none;
   -ms-user-select: none;
 }
-.circle-icon {
-    padding: 10px;
+
+.popup-content {
+  width: 100% !important;
+}
+
+.popup-overlay {
+  top: 55px !important;
+}
+
+@media (min-width: 768px) {
+  .popup-content {
+    width: 70% !important;
+  }
 }
